--- a/components/list.html
+++ b/components/list.html
@@ -1,25 +1,4 @@
 <!-- this component is showing the info in the list -->
-
-
-<section >
-    <ul class="list-unstyled">
-        <li>
-
-            <div id="gitList" class="tracks">
-            <div class="d-flex flex-row justify-content-between">
-                <div class="p-2">
-                    <h4>{{track.title}}</h4>
-                </div>
-                <div class="p-2">
-                    <i class="track-arrow" aria-hidden="true"></i>
-                </div>
-            </div>
-            <div class="track-details">
-             {{track.expect}}
-            </div>
-            </div>
-        </li>
-    </ul>
+<section class="qa">
+    <ul id="listContent"></ul>
 </section>
-
-
