Listevisning i calender.html.

--- a/components/calender.html
+++ b/components/calender.html
@@ -126,3 +126,186 @@
             </div>
 </div>
 
+
+
+<!---------------------------------LIST--------------------------------->
+<section class="qa">
+    <ul> <!--id="listContent">-->
+        <li><!--TRACK 1-->
+            <figure class="cut-image">
+                <img id="listImg1" class="image-to-cut" src="img/git.png">
+            </figure>
+
+            <a href=""><!--Dropdown-->
+                <h3 id="listTitle1"></h3><!--TITLE-->
+            </a>
+
+            <div class="flex-contain">
+                <div>
+                    <p id="listExpect1"></p>
+                    <p id="listPrereq1"></p>
+                    <p id="listWhoJoin1"></p>
+                    <p id="listnumberOfPartic1"></p>
+                    <p id="listHost1"></p>
+                    <p id="listDuration1"></p>
+                    <p id="listType1"></p>
+                    <p id="listElseText1"></p>
+                    <p id="listStartTime1"></p>
+                    <p id="listRoom1"></p>
+                </div>
+
+                <!--SWITCH-->
+                <div class="flex-item">
+                    <p class="lead">Going?</p>
+
+                    <label class="switch">
+                        <input type="checkbox">
+                        <div class="slider"></div>
+                    </label>
+
+                </div><!--end SWITCH-->
+            </div><!--end flex contain--->
+        </li><!--end TRACK 1-->
+        <li><!--TRACK 2-->
+            <figure class="cut-image">
+                <img id="listImg2" class="image-to-cut" src="">
+            </figure>
+
+            <a href=""><!--Dropdown-->
+                <h3 id="listTitle2"></h3><!--TITLE-->
+            </a>
+
+            <div class="flex-contain">
+                <div>
+                    <p id="listExpect2"></p>
+                    <p id="listPrereq2"></p>
+                    <p id="listWhoJoin2"></p>
+                    <p id="listnumberOfPartic2"></p>
+                    <p id="listHost2"></p>
+                    <p id="listDuration2"></p>
+                    <p id="listType2"></p>
+                    <p id="listElseText2"></p>
+                    <p id="listStartTime2"></p>
+                    <p id="listRoom2"></p>
+                </div>
+
+                <!--SWITCH-->
+                <div class="flex-item">
+                    <p class="lead">Going?</p>
+
+                    <label class="switch">
+                        <input type="checkbox">
+                        <div class="slider"></div>
+                    </label>
+
+                </div><!--end SWITCH-->
+            </div><!--end flex contain--->
+        </li><!--end TRACK 2-->
+        <li><!--TRACK 3-->
+            <figure class="cut-image">
+                <img id="listImg3" class="image-to-cut" src="">
+            </figure>
+
+            <a href=""><!--Dropdown-->
+                <h3 id="listTitle3"></h3><!--TITLE-->
+            </a>
+
+            <div class="flex-contain">
+                <div>
+                    <p id="listExpect3"></p>
+                    <p id="listPrereq3"></p>
+                    <p id="listWhoJoin3"></p>
+                    <p id="listnumberOfPartic3"></p>
+                    <p id="listHost3"></p>
+                    <p id="listDuration3"></p>
+                    <p id="listType3"></p>
+                    <p id="listElseText3"></p>
+                    <p id="listStartTime3"></p>
+                    <p id="listRoom3"></p>
+                </div>
+
+                <!--SWITCH-->
+                <div class="flex-item">
+                    <p class="lead">Going?</p>
+
+                    <label class="switch">
+                        <input type="checkbox">
+                        <div class="slider"></div>
+                    </label>
+
+                </div><!--end SWITCH-->
+            </div><!--end flex contain--->
+        </li><!--end TRACK 3-->
+        <li><!--TRACK 4-->
+            <figure class="cut-image">
+                <img id="listImg4" class="image-to-cut" src="">
+            </figure>
+
+            <a href=""><!--Dropdown-->
+                <h3 id="listTitle4"></h3><!--TITLE-->
+            </a>
+
+            <div class="flex-contain">
+                <div>
+                    <p id="listExpect4"></p>
+                    <p id="listPrereq4"></p>
+                    <p id="listWhoJoin4"></p>
+                    <p id="listnumberOfPartic4"></p>
+                    <p id="listHost4"></p>
+                    <p id="listDuration4"></p>
+                    <p id="listType4"></p>
+                    <p id="listElseText4"></p>
+                    <p id="listStartTime4"></p>
+                    <p id="listRoom4"></p>
+                </div>
+
+                <!--SWITCH-->
+                <div class="flex-item">
+                    <p class="lead">Going?</p>
+
+                    <label class="switch">
+                        <input type="checkbox">
+                        <div class="slider"></div>
+                    </label>
+
+                </div><!--end SWITCH-->
+            </div><!--end flex contain--->
+        </li><!--end TRACK 4-->
+        <li><!--TRACK 5-->
+            <figure class="cut-image">
+                <img id="listImg5" class="image-to-cut" src="">
+            </figure>
+
+            <a href=""><!--Dropdown-->
+                <h3 id="listTitle5"></h3><!--TITLE-->
+            </a>
+
+            <div class="flex-contain">
+                <div>
+                    <p id="listExpect5"></p>
+                    <p id="listPrereq5"></p>
+                    <p id="listWhoJoin5"></p>
+                    <p id="listnumberOfPartic5"></p>
+                    <p id="listHost5"></p>
+                    <p id="listDuration5"></p>
+                    <p id="listType5"></p>
+                    <p id="listElseText5"></p>
+                    <p id="listStartTime5"></p>
+                    <p id="listRoom5"></p>
+                </div>
+
+                <!--SWITCH-->
+                <div class="flex-item">
+                    <p class="lead">Going?</p>
+
+                    <label class="switch">
+                        <input type="checkbox">
+                        <div class="slider"></div>
+                    </label>
+
+                </div><!--end SWITCH-->
+            </div><!--end flex contain--->
+        </li><!--end TRACK 5-->
+    </ul>
+</section>
+<!---------------------------------end LIST--------------------------------->
