Added "Add track" page and form

--- a/components/header.html
+++ b/components/header.html
@@ -8,7 +8,7 @@
                 <button>Menu</button>
                 <nav class="mainMenu">
 					<ul>
-                        <li><a href="#">Add track</a></li>
+                        <li><a href="addTrack.html">Add track</a></li>
 					</ul>
 				</nav>
 			</div>
