--- a/components/navigation.html
+++ b/components/navigation.html
@@ -11,8 +11,8 @@
 -->
 
 <div id="navWeek">
-  <div><a id="prevBtn" href="#"><i class="fa fa-angle-left" aria-hidden="true"></i> Previous</a></div>
-  <div><a id="thisWeekBtn" href="#">This week</a></div>
-  <div><a id="nextBtn" href="#">Next  <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+  <div><a id="prevWeekBtn" href="#prev"><i class="fa fa-angle-left" aria-hidden="true"></i> Previous</a></div>
+  <div><a id="thisWeekBtn" href="#this">This week</a></div>
+  <div><a id="nextWeekBtn" href="#next">Next  <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
 </div>
 
