Revert "Magnus hjälp"
This reverts commit a49028da8238ae40196a453cfa5be9a03c0e2810.

--- a/components/calender.html
+++ b/components/calender.html
@@ -90,7 +90,7 @@
           <div class="track-time-mob">1300-<br>1345</div>
         </div>
         <div>
-                <div class="track-mob JStrack1" id="gitCal">
+                <div class="track-mob JStrack1">
                 </div>
                 <div class="track-mob JStrack2">
                 </div>
@@ -140,7 +140,7 @@
                 <h3 id="listTitle1"></h3><!--TITLE-->
             </a>
 
-            <div class="flex-contain" id="gitList">
+            <div class="flex-contain">
                 <div>
                     <p id="listExpect1"></p>
                     <p id="listPrereq1"></p>
