Alle komponenter i index.html - fungerande funksjoner. jQuery fra main.js

--- a/components/calender.html
+++ b/components/calender.html
@@ -1,130 +1,72 @@
 <!-- this component shows the info in the calender -->
 
-<!-- SARAS TABLE
-<div class="table">
-
-    <table>
-
-        <tr>
-            <td id="gitCal" class="cal JStrack1"></td><!--scrollToMoreInfo()
-            <td class="cal JStrack2"></td>
-            <td class="cal JStrack4"></td>
-            <td class="cal JStrack6"></td>
-            <td class="cal JStrack9"></td>
-        </tr>
-
-        <tr>
-            <td class="cal JStrack1"></td>
-            <td class="cal JStrack2"></td>
-            <td class="cal JStrack4"></td>
-            <td class="cal JStrack7"></td>
-            <td class="cal JStrack10"></td>
-        </tr>
-
-        <tr>
-            <td class="cal JStrack1"></td>
-            <td class="cal JStrack3"></td>
-            <td class="cal JStrack5"></td>
-            <td class="cal JStrack8"></td>
-        </tr>
-    </table>
-</div>-->
-
 <!-- TABLE VISIBLE ONLY ON LARGE SCREENS -->
-<div id="cal-desktop">
-<table class="table-cal">
-    <!--
-    <thead class="thead-default">
-        <tr>
-            <th>Time</th>
-            <th>Track 1</th>
-            <th>Track 2</th>
-            <th>Track 3</th>
-            <th>Track 4</th>
-            <th>Track 5</th>
-        </tr>
-    </thead>
-    -->
-    <tbody>
-        <tr>
-            <th scope="row">1300-
-                <br>1345
-            </th>
-            <td class="cal JStrack1" rowspan="3">
-            </td>
-            <td class="cal JStrack2" rowspan="3">
-            </td>
-            <td class="cal JStrack4" rowspan="2">
-            </td>
-            <td class="cal JStrack3" rowspan="2">
-            </td>
-            <td class="cal JStrack6" rowspan="1">
-            </td>
-        </tr>
-        <tr>
-            <th scope="row">1400-
-                <br>1445
-            </th>
-            <td class="cal JStrack7">
-            </td>
-        </tr>
-        <tr>
-            <th scope="row">1500-
-                <br>1545
-            </th>
-            <td class="cal JStrack5">
-            </td>
-            <td style="background: white"></td>
-            <td class="cal JStrack8">
-            </td>
-        </tr>
-    </tbody>
-</table>
-</div>
+<!--<div id="cal-desktop">
+    <table class="table-cal">
+        <tbody>
+            <tr>
+                <th scope="row">1300-
+                    <br>1345
+                </th>
+                <td class="cal JStrack1" rowspan="3"></td>
+                <td class="cal JStrack2" rowspan="3"></td>
+                <td class="cal JStrack4" rowspan="2"></td>
+                <td class="cal JStrack3" rowspan="2"></td>
+                <td class="cal JStrack6" rowspan="1"></td>
+            </tr>
+            <tr>
+                <th scope="row">1400-
+                    <br>1445
+                </th>
+                <td class="cal JStrack7"></td>
+            </tr>
+            <tr>
+                <th scope="row">1500-
+                    <br>1545
+                </th>
+                <td class="cal JStrack5"></td>
+                <td style="background: white"></td>
+                <td class="cal JStrack8"></td>
+            </tr>
+        </tbody>
+    </table>
+</div><!-- end TABLE VISIBLE ONLY ON LARGE SCREENS -->
 
 
 <!-- DIV VISIBLE ONLY ON SMALL SCREENS -->
-<div id="cal-mobile">
+<!--<div id="cal-mobile">
     <div id="main">
         <div>
-          <div class="track-time-mob">1300-<br>1345</div>
+            <div class="track-time-mob">1300-<br>1345</div>
         </div>
         <div>
-                <div class="track-mob JStrack1">
-                </div>
-                <div class="track-mob JStrack2">
-                </div>
-                <div class="track-mob JStrack3">
-                </div>
-                <div class="track-mob JStrack4">
-                </div>
-                <div class="track-mob JStrack6">
-                </div>
+            <div class="track-mob JStrack1"></div>
+            <div class="track-mob JStrack2"></div>
+            <div class="track-mob JStrack3"></div>
+            <div class="track-mob JStrack4"></div>
+            <div class="track-mob JStrack6"></div>
         </div>
     </div>
 
     <div id="main">
-            <div>
-              <div class="track-time-mob">1400-<br>1445</div>
-            </div>
-            <div>
-                <div class="track-mob JStrack7">
-                </div>
-            </div>
+        <div>
+            <div class="track-time-mob">1400-<br>1445</div>
+        </div>
+        <div>
+            <div class="track-mob JStrack7"></div>
+        </div>
     </div>
 
     <div id="main">
-            <div>
-              <div class="track-time-mob">1500-<br>1545</div>
-            </div>
-            <div>
-                    <div class="track-mob JStrack5">
-                    </div>
-                    <div class="track-mob JStrack8">
-                    </div>
-                </div>
-            </div>
-</div>
+        <div>
+            <div class="track-time-mob">1500-<br>1545</div>
+        </div>
+        <div>
+            <div class="track-mob JStrack5"></div>
+            <div class="track-mob JStrack8"></div>
+        </div>
+    </div>
+</div><!-- end DIV VISIBLE ONLY ON SMALL SCREENS -->
 
 
 
