--- a/components/header.html
+++ b/components/header.html
@@ -1,6 +1,6 @@
 <!-- this component shows info in header -->
 
-<header class="pageHeader">
+<!--<header class="pageHeader">
 			<div class="wrapper basic">
 				<a class="logo" href="index.html">
 					<img src="../images/logo.svg" alt="Making Waves Logo">
@@ -12,4 +12,4 @@
 					</ul>
 				</nav>
 			</div>
-</header>
+</header>-->
