--- a/components/navigation.html
+++ b/components/navigation.html
@@ -10,9 +10,9 @@
 </nav>
 -->
 
-<div id="navWeek">
+<!--<div id="navWeek">
   <div><a id="prevBtn" href="#"><i class="fa fa-angle-left" aria-hidden="true"></i> Previous</a></div>
   <div><a id="thisWeekBtn" href="#">This week</a></div>
   <div><a id="nextBtn" href="#">Next  <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
-</div>
+</div>-->
 
