Added dummyimage for events

--- a/style.scss
+++ b/style.scss
@@ -954,3 +954,10 @@ button.subtle {
 	font-size: .778rem;
 }
 
+/********************************************
+scrollTo no underline
+********************************************/
+
+.scrollTo {
+    text-decoration: none;
+}
