--- a/css/style.css
+++ b/css/style.css
@@ -735,3 +735,9 @@ button.subtle {
   font-family: inherit;
   color: inherit;
   font-size: .778rem; }
+
+/********************************************
+scrollTo no underline
+********************************************/
+.scrollTo {
+  text-decoration: none; }
