Logo with Show & Do

--- a/style.scss
+++ b/style.scss
@@ -350,7 +350,7 @@ pageHeader
     padding-top: 35px;
     margin-bottom: 100px;
     .logo {
-        background: url('../images/logo.svg') no-repeat center, url('../images/logo_col1.svg') no-repeat -10000px center;
+        background: url('../images/logo-sd.svg') no-repeat center, url('../images/logo_col1.svg') no-repeat -10000px center;
         /* preload */
         display: inline-block;
         vertical-align: top;
