minor changes to logo hover

--- a/css/style.css
+++ b/css/style.css
@@ -273,12 +273,12 @@ pageHeader
   padding-top: 35px;
   margin-bottom: 100px; }
   .pageHeader .logo {
-    background: url("../images/logo-sd.svg") no-repeat center, url("../images/logo_col1.svg") no-repeat -10000px center;
+    background: url("../images/logo-sd.svg") no-repeat center, url("../images/logo-sd-col1.svg") no-repeat -10000px center;
     /* preload */
     display: inline-block;
     vertical-align: top; }
     .pageHeader .logo:hover {
-      background: url("../images/logo_col1.svg") no-repeat center; }
+      background: url("../images/logo-sd-col1.svg") no-repeat center; }
     .pageHeader .logo img {
       display: block;
       height: 27px;
