--- a/style.scss
+++ b/style.scss
@@ -350,12 +350,12 @@ pageHeader
     padding-top: 35px;
     margin-bottom: 100px;
     .logo {
-        background: url('../images/logo-sd.svg') no-repeat center, url('../images/logo_col1.svg') no-repeat -10000px center;
+        background: url('../images/logo-sd.svg') no-repeat center, url('../images/logo-sd-col1.svg') no-repeat -10000px center;
         /* preload */
         display: inline-block;
         vertical-align: top;
         &:hover {
-            background: url('../images/logo_col1.svg') no-repeat center;
+            background: url('../images/logo-sd-col1.svg') no-repeat center;
         }
         img {
             display: block;
